--- a/htdocs/css/screen.css
+++ b/htdocs/css/screen.css
@@ -11,6 +11,10 @@
     color: #681818;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 html, body {
 	height: 100%;
 }
